# FranAudio

./: .gitattributes  .gitignore  CMakeFindLibs.cmake  CMakeLists.txt  CMakeMacros.cmake  CMakeSettings.json  Doxyfile  README.md
FranAudio/: Files.cmake  FranAudio.cpp  FranAudio.hpp  FranAudioAPI.hpp
FranAudio/Backend/: Backend.cpp  Backend.hpp  BackendTypes.hpp
FranAudio/Backend/miniaudio/: Backend_miniaudio.cpp  Backend_miniaudio.hpp
FranAudio/Decoder/: Decoder.cpp  Decoder.hpp  DecoderTypes.hpp
FranAudio/Decoder/libnyquist/: Decoder_libnyquist.cpp  Decoder_libnyquist.hpp
FranAudio/Decoder/miniaudio/: Decoder_miniaudio.cpp  Decoder_miniaudio.hpp
FranAudio/Logger/: Logger.cpp  Logger.hpp
FranAudio/Sound/: Sound.cpp  Sound.hpp
FranAudio/Sound/WaveData/: WaveData.cpp  WaveData.hpp  WaveFormats.hpp
FranAudioClient/: Files.cmake  FranAudioClient.cpp  FranAudioClient.hpp  FranAudioClientAPI.hpp  FranAudioClient_Linux.cpp  FranAudioClient_Win32.cpp
FranAudioServer/: Files.cmake  FranAudioServer.cpp  FranAudioServer.hpp  FranAudioServer_Linux.cpp  FranAudioServer_Win32.cpp
FranAudioShared/: Files.cmake  Network.hpp
FranAudioShared/Containers/: UnorderedMap.hpp
FranAudioShared/Logger/: Logger.cpp  Logger.hpp
FranAudioShared/Network/: Network.hpp
FranAudioShared/Serialisation/: Serialisation.hpp
FranAudioTest/: Files.cmake  FranAudioTest.cpp  FranAudioTest.hpp
Libs/: README.md
Libs/glad/include/glad/: gl.h
Libs/imgui/: imgui.cpp  imgui_filebrowser.h
Libs/imgui/styles/: imgui_style_candy.hpp
Libs/imgui/styles/fonts/: BoldPixels1_4.hpp
Libs/libnyquist/: CMakeLists.txt
Libs/libnyquist/src/: Encoders.cpp  OpusDecoder.cpp  OpusDependencies.c  VorbisDecoder.cpp  VorbisDependencies.c
